--- a/source/fr/fr-adventure.html.erb
+++ b/source/fr/fr-adventure.html.erb
@@ -11,25 +11,25 @@ title: Kassiopé Project
   <div class="primary-text blog">
     <h3>Jour 1</h3>
     <p>
-      C'est l’heure du grand départ. 8 heures du matin et on se retrouve tous à l aéroport prêts à partir pour cette
-      grande experience humanitaire. Le vol se passe à merveille. On rencontre tous plusieurs passagers indiens chacun
-      de notre côté et tous sont aussi gentils les uns que les autres. Ils nous conseillent tous des endroits à visiter
-      à Ahmedabad. Ils sont très ouverts et intéressés par notre projet. Ce voyage s'annonce vraiment bien.
+      C'est l’heure du grand départ. 8 heures du matin et on se retrouve tous à l'aéroport prêts à partir pour cette
+      grande expérience humanitaire. Le vol se passe à merveille. On rencontre tous plusieurs passagers indiens chacun
+      de notre côté qui sont ravis à l'idée de nous donner un premier aperçu de leur pays. <!-- Ils nous conseillent tous des endroits à visiter
+      à Ahmedabad. Ils sont très ouverts et intéressés par notre projet.--> Ce voyage s'annonce vraiment bien.
       On arrive parfaitement à l'heure à Ahmedabad et une fois tous les produits anti-moustique appliqués et les
       médicaments préventifs avalés, on est prêt à découvrir ce pays, nouveau pour deux d'entre nous. Une arrivée difficile à
       5h30 dans notre petite maison qui nous servira de logement pendant presque trois semaines et un réveil encore
       plus compliqué à 9h nous font arriver dans le centre de Manav Sadhna très fatigués. Mais la fatigue ne démotive
-      pas 4 jeunes garçons prêts à tout pour aller au bout de leur projet. Après une petite cérémonie d'accueil où l’on
-      reçoit un joli point jaune sur le front et un petit coeur pour montrer l'amour qui va être partagé pendant notre
-      séjour. Le premier jour est en fait un jour de découverte. Nous ne commençons pas tout de suite à travailler sur
+      pas 4 jeunes garçons prêts à tout pour aller au bout de leur projet. Après une cérémonie traditionnelle d'accueil où l’on
+      reçoit un joli point jaune sur le front et un petit coeur en tissu pour montrer l'amour partagé par la communauté et leur
+      reconnaissance. Le premier jour est en fait un jour de découverte. Nous ne commençons pas tout de suite à travailler sur
       notre projet mais on visite la ville avec l'aide du superviseur des volontaires, un indien du nom de Ajay. Nous
       avons visité une autre partie du centre de Manav Sadhna. Un centre situé juste à côté d’un bidonville. Les jeunes
       vivent dans des conditions désastreuses mais Manav Sadhna fait tout pour les aider en leur offrant éducation et nourriture.
       Tous les enfants viennent nous serrer la main et s'agglutinent autour de nous avec des grands sourires.
-      En fin de journée, nous avons pu voir les filles du centre communautaire danser sur de la musique bolywoodienne.
-      La danse est ici un moyen privilégié pour oublier, ne penser qu'à l'instant présent, le temps de quelques minutes.
+      En fin de journée, nous avons pu voir les filles du centre communautaire danser sur de la musique bollywoodienne.
+      La danse est ici un moyen privilégié pour se retrouver à plusieurs et se sentir exister, le tout dans une ambiance euphorique.
       C'est la gentilesse, la souplesse d'esprit et les sourires sur ces visages d'enfants qui nous ont le plus inspiré et
-      motivé encore plus pour mener ce projet à bout et à bien.
+      motivé pour mener ce projet à bout et à bien.
 
     </p>
 
