Photo Day 1 2 3 + Weekend 2 + Day 11

--- a/source/fr/fr-adventure.html.erb
+++ b/source/fr/fr-adventure.html.erb
@@ -30,8 +30,23 @@ title: Kassiopé Project
       La danse est ici un moyen privilégié pour se retrouver à plusieurs et se sentir exister, le tout dans une ambiance euphorique.
       C'est la gentilesse, la souplesse d'esprit et les sourires sur ces visages d'enfants qui nous ont le plus inspiré et
       motivé pour mener ce projet à bout et à bien.
-
     </p>
+    <div class="container-fluid">
+      <div class="row">
+
+        <div class="col-xs-6">
+          <%= image_tag "heart-kids.JPG", class:"heart-kids img-blog", alt:"Enfants forment un coeur avec leurs mains" %>
+        </div>
+
+
+        <div class="col-xs-6">
+          <%= image_tag "slum-us.JPG", class:"slum-us img-blog", alt:"Clement, Pierre et Matthew marchent dans le bidonville" %>
+        </div>
+
+      </div>
+
+    </div>
+
 
     <h3>Jour 2</h3>
     <p>
@@ -48,6 +63,15 @@ title: Kassiopé Project
       niveau d’anglais mais très vite quelques indiens parlant mieux anglais traduisent nos explications. Les volontaires
       sont en tout cas très déterminés à apprendre et le simple fait de découvrir un nouveau domaine les rend heureux.
       Une première expérience sur le terrain qui commence donc plutôt bien.
+
+      <div class="col-xs-6">
+        <%= image_tag "matthew-explain.JPG", class:"img-blog", alt:"Matthew apprend aux volontaires notre démarche de tests visuels" %>
+      </div>
+
+      <div class="col-xs-6">
+        <%= image_tag "kids2.JPG", class:"img-blog", alt:"Groupe d'enfants souriants" %>
+      </div>
+
 
     </p>
 
@@ -72,6 +96,14 @@ title: Kassiopé Project
       à notre première journée de tests visuels sur les enfants.
 
     </p>
+
+    <div class="col-xs-6">
+      <%= image_tag "viren-reunion.JPG", class:"img-blog", alt:"Reunion du samedi matin autour du fondateur Viren" %>
+    </div>
+
+    <div class="col-xs-6">
+      <%= image_tag "heart-tong.JPG", class:"img-blog", alt:"Coeur avec les tongs des enfants dans l'école" %>
+    </div>
 
     <h3>Jour 5</h3>
     <p>
@@ -109,6 +141,45 @@ title: Kassiopé Project
       en 2005 : le Séva Café. Le principe est très intéressant: il n'y a pas de prix sur la nourriture mais chacun donne ce qu’il veut
       à la fin de repas, ce “don” sera distribué aux personnels du restaurant qui sont volontaires.
     </p>
+
+    <h3>Jour 8</h3>
+    <p>
+      Le deuxième jour dans le centre de Ban Sanshar se déroule à merveille. Les enfants sont toujours aussi adorables et très coopératifs
+      et on continue rapidement les tests. Pendant ce temps, Matthew part avec un autre volontaire en direction d’un des hôpitaux d’Ahmedabad
+      rencontrer docteur Shah une ophtalmologiste qui accepte de nous aider dans notre projet. Pendant 1h30 tous les matins, elle et ses
+      collègues peuvent accueillir une dizaine d'enfants pour vérifier nos tests et ensuite prescrire des lunettes. L’après-midi, après avoir
+      fini le deuxième centre, on discute avec Shirish une des personnes qui gère Manav Sadhna pour essayer de trouver des opticiens qui
+      pourraient nous vendre des lunettes au meilleur prix. Enfin pour finir la journée, on se rend dans un grand mall, le Alpha One Mall pour faire
+      le plein de Masala Tea, le thé local qu'on déguste tous les jours ici, ainsi que de vêtements indiens.
+    </p>
+
+    <h3>Week-end 2</h3>
+    <p>
+      Après une grasse-matinée bien méritée après le travail fourni cette semaine, on prend un rickshaw pour rentrer au centre de Manav Sadhna.
+      On mange en vitesse le repas préparé par les volontaires et on va installer les machines pour entraîner Rahman, le volontaire qui
+      continuera le projet une fois qu'on sera parti. Mais avant cela on rencontre un homme qui nous montre ces talents de dessin et qui
+      nous explique que par la méditation et la détermination, il est devenu ambidextre ce qui lui permet de faire des dessins très complexes.
+      Ensuite on commence donc à faire des tests sur les enfants et on se concentre particulièrement sur la formation de Rahman. Il apprend
+      bien et progresse très vite. Puis on retourne chez Shiv, l'ami qui nous accueille le week-end. Après un repas typique indien, on se
+      couche tôt pour se préparer à la journée du lendemain.
+      Le dimanche, c'est un réveil difficile à 5h30 qui nous fait commencer la journée. En effet on va visiter un lac à 1heure d'Ahmedabad avec
+      un des volontaires rencontré au Seva Café. Mais une grosse désillusion nous attend. À 6heures, il nous appelle pour nous dire qu'il pleut
+      trop et qu'on ne pourra pas y aller. On se recouche donc vite et on se relève vers midi pour aller visiter des temples et des lieux ou les
+      rois indiens habitaient. Swaraj, un autre ami nous montre tout ça puis on rentre chez lui et sa mère nous reçoit avec encore un repas indien.
+      On ne refuse pas et on peut aller se coucher tranquillement après avoir passé un bon week-end à visiter Ahmedabad et ses alentours.
+    </p>
+
+    <h3>Jour 11</h3>
+    <p>
+      Le lundi matin, on se réveille assez tôt pour avoir le temps d'être à l'heure à Manav Sadhna. On prend donc un rickshaw pour rentrer
+      et on commence directement les tests sur les plus jeunes enfants. Tout se déroule comme on le veut même si on est un peu plus fatigue
+      que d'habitude. Mais le thé masala qu'on nous ramène nous permet de nous donner un boost. Grâce à cela on fini tous les jeunes enfants
+      du centre dès le matin. Comme d'habitude, on mange au centre et on continue l'après-midi avec les adolescents. Puis le soir, avec plusieurs
+      volontaires, on se rend dans un restaurant indien qui s'appelle "mirch masala". C'est la deuxième fois qu'on y va mais l'endroit nous plaît
+      toujours autant. Comme on peut dormir plus longtemps le lendemain, on regarde un film ensemble avant d'aller se coucher pour continuer
+      notre mission humanitaire le lendemain.
+    </p>
+
   </div>
 
 
