--- a/source/stylesheets/pages/_adventure.css.scss
+++ b/source/stylesheets/pages/_adventure.css.scss
@@ -11,3 +11,19 @@
     line-height: 1.6em;
   }
 }
+
+.img-blog {
+  width: 100%;
+  height: 350px;
+  margin-bottom: 25px;
+  @media screen and (max-width:1000px) {
+    height: 280px;
+  }
+  @media screen and (max-width: 750px) {
+    height: 200px;
+  }
+}
+
+.panorama {
+  height: 150px;
+}
