--- a/source/fr/fr-adventure.html.erb
+++ b/source/fr/fr-adventure.html.erb
@@ -180,10 +180,17 @@ title: Kassiopé Project
       notre mission humanitaire le lendemain.
     </p>
 
+
+    <h3>Jour 12</h3>
+    <p>
+      Ce mardi est une journée plutôt tranquille pour nous. On doit s'occuper des quelques élèves restants du centre de Manav Sadhna.
+      Le matin on commence donc à 9h30 pour s'occuper de 7 élèves seulement. Comme on a du temps avant le repas du midi, on decide donc
+      d'aller acheter des tuniques indiennes dans la boutique de Manav. Après manger, on finit les tests sur les adolescents puis on
+      s'occupe des différents professeurs et personnes âgées travaillant pour le centre. Le soir, la mère d'une des volontaires nous
+      invite avec quelques autres personnes pour un repas au Hyatt hotel. C'est un hotel 5 étoiles très luxueux et ce changement
+      d'ambiance nous marque beaucoup. On découvre réellement les différences sociales et financières entre les indiens.
+    </p>
   </div>
-
-
-
 
 
   <script>
