Day 13 + Photos update

--- a/source/fr/fr-adventure.html.erb
+++ b/source/fr/fr-adventure.html.erb
@@ -115,6 +115,10 @@ title: Kassiopé Project
 
     </p>
 
+    <div class="col-xs-12">
+      <%= image_tag "slum-pano.JPG", class:"img-blog", alt:"Bidonville du premier community center en panorama" %>
+    </div>
+
     <h3>Jour 6</h3>
     <p>
       C’est le deuxième jour au centre de sankharbhuvan. On a bien pris le rythme des consultations et on passe à
@@ -127,6 +131,14 @@ title: Kassiopé Project
       produits comme le chicken tandoori.
 
     </p>
+
+    <div class="col-sm-6">
+      <%= image_tag "eye-tests.JPG", class:"img-blog", alt:"Clement et Matthew font les tests visuels sur des enfants" %>
+    </div>
+
+    <div class="col-sm-6">
+      <%= image_tag "mirch-masala-group.jpg", class:"img-blog", alt:"Photo de notre groupe au restaurant Mirch Masala" %>
+    </div>
 
     <h3>Jour 7</h3>
     <p>
@@ -142,6 +154,13 @@ title: Kassiopé Project
       à la fin de repas, ce “don” sera distribué aux personnels du restaurant qui sont volontaires.
     </p>
 
+    <div class="col-xs-6">
+      <%= image_tag "slum-dirty.JPG", class:"img-blog", alt:"Bidonville" %>
+    </div>
+    <div class="col-xs-6">
+      <%= image_tag "invitation-slum.jpg", class:"img-blog", alt:"Photo de notre groupe invité au bidonville où on nous a servi du thé masala délicieux" %>
+    </div>
+
     <h3>Jour 8</h3>
     <p>
       Le deuxième jour dans le centre de Ban Sanshar se déroule à merveille. Les enfants sont toujours aussi adorables et très coopératifs
@@ -152,6 +171,9 @@ title: Kassiopé Project
       pourraient nous vendre des lunettes au meilleur prix. Enfin pour finir la journée, on se rend dans un grand mall, le Alpha One Mall pour faire
       le plein de Masala Tea, le thé local qu'on déguste tous les jours ici, ainsi que de vêtements indiens.
     </p>
+    <div class="col-xs-12">
+      <%= image_tag "children-sponsor.jpg", class:"img-blog", alt:"Tous les enfants de l'école portent les affiches de nos partenaires" %>
+    </div>
 
     <h3>Week-end 2</h3>
     <p>
@@ -162,23 +184,45 @@ title: Kassiopé Project
       Ensuite on commence donc à faire des tests sur les enfants et on se concentre particulièrement sur la formation de Rahman. Il apprend
       bien et progresse très vite. Puis on retourne chez Shiv, l'ami qui nous accueille le week-end. Après un repas typique indien, on se
       couche tôt pour se préparer à la journée du lendemain.
-      Le dimanche, c'est un réveil difficile à 5h30 qui nous fait commencer la journée. En effet on va visiter un lac à 1heure d'Ahmedabad avec
-      un des volontaires rencontré au Seva Café. Mais une grosse désillusion nous attend. À 6heures, il nous appelle pour nous dire qu'il pleut
+      Le dimanche, c'est un réveil difficile à 5h30 qui nous fait commencer la journée. En effet on comptait visiter un lac à 1 heure d'Ahmedabad avec
+      un des volontaires rencontré au Seva Café. Mais, grosse désillusion, à 6heures, il nous appelle pour nous dire qu'il pleut
       trop et qu'on ne pourra pas y aller. On se recouche donc vite et on se relève vers midi pour aller visiter des temples et des lieux ou les
-      rois indiens habitaient. Swaraj, un autre ami nous montre tout ça puis on rentre chez lui et sa mère nous reçoit avec encore un repas indien.
-      On ne refuse pas et on peut aller se coucher tranquillement après avoir passé un bon week-end à visiter Ahmedabad et ses alentours.
+      rois indiens habitaient. On commence par le Adalaj step-well (photo en haut à droite) qui une des rares architectures hindou-musulmane, construite en 1499,
+      où les rois et reines allaient se nettoyer dans les bains et qui accuellaient également des voyageurs, notamment des commerçants.
+      Puis, on enchaine avec le Gurudwara Gobind Dham, gurudwara étant le lieu sacré de la religion Sikh, dans lequel nous étions tous coiffés d'un bandana
+      orange. Enfin on visite le Vaishnodevi Temple qui est une reconstitution d'un temple hindou situé dans les montagnes.
+      Après cela, on rentre chez la mère du correspondant qui nous a montré ces temples et l'on fini notre journée avec un repas indien.
     </p>
+    <div class="col-sm-6">
+      <%= image_tag "tunique.jpg", class:"img-blog", alt:"Tuniques indiennes" %>
+    </div>
+    <div class="col-xs-6">
+      <%= image_tag "adalaj-step-well.jpg", class:"img-blog", alt:"Adalaj step-well" %>
+    </div>
+
+    <div class="col-sm-6">
+      <%= image_tag "sikh-bandana.jpg", class:"img-blog", alt:"Le groupe kassiopé avec les bandanas de la religion Sikh" %>
+    </div>
+    <div class="col-xs-6">
+      <%= image_tag "sikh-temple.jpg", class:"img-blog", alt:"Temple Sikh" %>
+    </div>
 
     <h3>Jour 11</h3>
     <p>
       Le lundi matin, on se réveille assez tôt pour avoir le temps d'être à l'heure à Manav Sadhna. On prend donc un rickshaw pour rentrer
       et on commence directement les tests sur les plus jeunes enfants. Tout se déroule comme on le veut même si on est un peu plus fatigue
-      que d'habitude. Mais le thé masala qu'on nous ramène nous permet de nous donner un boost. Grâce à cela on fini tous les jeunes enfants
+      que d'habitude. Mais le thé masala qu'on nous ramène nous permet de nous donner un boost. Grâce à cela on finit tous les jeunes enfants
       du centre dès le matin. Comme d'habitude, on mange au centre et on continue l'après-midi avec les adolescents. Puis le soir, avec plusieurs
       volontaires, on se rend dans un restaurant indien qui s'appelle "mirch masala". C'est la deuxième fois qu'on y va mais l'endroit nous plaît
       toujours autant. Comme on peut dormir plus longtemps le lendemain, on regarde un film ensemble avant d'aller se coucher pour continuer
       notre mission humanitaire le lendemain.
     </p>
+    <div class="col-sm-5">
+      <%= image_tag "manav-food.jpg", class:"img-blog", alt:"Repas du midi à Manav Sadhna" %>
+    </div>
+    <div class="col-sm-7">
+      <%= image_tag "mirch-masala-food.jpg", class:"img-blog", alt:"Diner au restaurant Mirch Masala" %>
+    </div>
 
 
     <h3>Jour 12</h3>
@@ -190,6 +234,36 @@ title: Kassiopé Project
       invite avec quelques autres personnes pour un repas au Hyatt hotel. C'est un hotel 5 étoiles très luxueux et ce changement
       d'ambiance nous marque beaucoup. On découvre réellement les différences sociales et financières entre les indiens.
     </p>
+    <div class="col-sm-7">
+      <%= image_tag "kids-pierre-clement.jpg", class:"img-blog", alt:"Photo de Pierre et Clément avec des enfants de l'école" %>
+    </div>
+    <div class="col-xs-5">
+      <%= image_tag "monkey.JPG", class:"img-blog", alt:"Singe se baladant autour du centre" %>
+    </div>
+    <div class="col-sm-6">
+      <%= image_tag "hyatt-group.jpg", class:"img-blog", alt:"Notre groupe au Hyatt hotel" %>
+    </div>
+    <div class="col-xs-6">
+      <%= image_tag "hyatt-food.jpg", class:"img-blog", alt:"Repas au restraurant du Hyatt hotel" %>
+    </div>
+
+    <h3>Jour 13</h3>
+    <p>
+      Aujourd'hui, on retourne dans le premier centre pour effectuer des tests de lecture à des enfants qui ont parfois du mal à lire,
+      ces tests s'effectuent assez rapidement car nous n'avons pas besoin d'utiliser la machine. La journée se finissant assez tôt, on
+      prend le temps de visiter le Iskcon Temple, assez réputé à Ahmedabad, dans lequel les fresques murales nous envoûtent, on se procure
+      également l'ouvrage Gita, qui est en quelque sorte la bible de l'hindouisme, riche en enseignements pas seulement pour les croyants
+      mais également concernant des sujets philosophiques touchant le matérialisme, l'altruisme et le Karma.
+      En rentrant, on retourne dans le bidonville dans lequel nous avions pris un thé masala mercredi dernier, avec un ballon de foot,
+      et l'on se met à jouer avec les garçons et même si le langage nous sépare, le sport nous rassemble. Ce jour de pluie, nous nous
+      amusons à jouer dans la boue ce qui nous fait oublier le temps qui passe et notre rendez-vous pour notre moment de méditation chez
+      un habitant près de chez nous, où nous allons, une fois de plus, chercher à oublier le temps et à se concentrer sur l'instant présent.
+      Après un long moment, la cloche sonne et annonce la fin de la méditation, on nous dira plus tard que nous avions méditer pendant 1 heure.
+      Des participants lisent alors un même extrait de texte, l'un en hindi, l'autre en anglais, concernant l'égo. Ensuite chacun prend la “pierre”
+      de parole et partage ses pensées concernant cet égo. On dine ensuite un repas offert par le propriétaire que nous ne connaissions même pas
+      et on échange avec quelques invités, notamment 2 américains qui connaissent également Manav Sadhna.
+    </p>
+
   </div>
 
 
