Day 14 + photos day 13

--- a/source/fr/fr-adventure.html.erb
+++ b/source/fr/fr-adventure.html.erb
@@ -264,8 +264,35 @@ title: Kassiopé Project
       et on échange avec quelques invités, notamment 2 américains qui connaissent également Manav Sadhna.
     </p>
 
-  </div>
+    <div class="col-xs-7">
+      <%= image_tag "env-tests.png", class:"img-blog", alt:"Tests de lecture au centre de filles" %>
+    </div>
+    <div class="col-xs-5">
+      <%= image_tag "gandhi-meditating.jpg", class:"img-blog", alt:"Tableau de Gandhi en pleine méditation" %>
+    </div>
 
+  <h3>Jour 14</h3>
+  <p>
+    Comme ce matin nous n'avons pas de tests à faire on decide d'aller à la prière du matin pour partager un moment
+    avec tout le staff de Manav Sadhna. Puis on travaille un peu sur le projet avant de déjeuner avec tous les autres
+    volontaires. L'après-midi, on commence les tests sur un nouveau centre juste à côté de notre maison. C'est un
+    internat composé uniquement de filles. Tous les élèves sont très gentils et patients et ils comprennent vite
+    ce qu'on attend d'eux. En fin de journée on a effectué plus de 35 tests et Rahman à ou s'entraîner comme il
+    le fallait. Le soir, avec tous les autres volontaires, on se dirige vers un restaurant typiquement indien:
+    le Vishala restaurant. Le cadre est fait pour qu'on se sente dans un endroit traditionnel et on se fait
+    accueillir directement par un spectacle de danse. On se retrouve même à danser avec eux à la fin. Ensuite
+    on passe tous à table. On est servi sur des grandes feuilles séchés plusieurs plats indiens. Et dès qu'on
+    finit un plat, on se fait reservir. À la fin, on assiste à un spectacle de marionnettes puis on à le droit
+    à une boule de glace à la rose ainsi que des petits cadeaux. Tout le monde est donc très content de cette
+    soirée qui s'est très bien déroulée.
+  </p>
+
+  <div class="col-xs-6">
+    <%= image_tag "vache-tuktuk.jpg", class:"img-blog", alt:"Une vache marche à côté d'un tuk-tuk" %>
+  </div>
+  <div class="col-xs-6">
+    <%= image_tag "vishallah.jpg", class:"img-blog", alt:"Repas au restaurant Vishallah" %>
+  </div>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
