--- a/source/fr/fr-adventure.html.erb
+++ b/source/fr/fr-adventure.html.erb
@@ -294,6 +294,19 @@ title: Kassiopé Project
     <%= image_tag "vishallah.jpg", class:"img-blog", alt:"Repas au restaurant Vishallah" %>
   </div>
 
+  <h3>Retour en France</h3>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-6">
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.644980319000852%26type%3D3&width=500" width="500" height="816" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+      </div>
+      <div class="col-xs-6">
+        <%= image_tag "screen-pdf-essential.png", class:"", alt:"Essentiel de notre voyage en une page", width:"560px", height:"800px" %>
+      </div>
+    </div>
+  </div>
+
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
