--- a/source/fr/fr-index.html.erb
+++ b/source/fr/fr-index.html.erb
@@ -106,7 +106,7 @@ title: Kassiopé Project
             <div class="us-text next-to-photo-text col-sm-7">
               <ul>
                 <li>Kassiopé est une association à but non-lucratif dont l'objectif est l'accès à des soins oculaires pour les plus démunis</li>
-                <li>Deux d’entre-nous sont déjà allés à Ahmedabad et ont enseigné dans une école près de l’Ashram de Gandhi. </li>
+                <li>Deux d’entre-nous sommes déjà allés à Ahmedabad et avons enseigné dans une école près de l’Ashram de Gandhi. </li>
                 <li>Nous partageons tous la même ambition : Voyager en Inde afin d’offrir à des enfants une qualité de vie décente en commençant par une bonne vue.</li>
               </ul>
             </div>
