--- a/source/layouts/layout_fr.erb
+++ b/source/layouts/layout_fr.erb
@@ -35,7 +35,7 @@
           <a href="fr-index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
-          <a href="../index.html">
+          <a href="en/en-index.html">
             <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
           </a>
 
