--- a/source/layouts/layout_en.erb
+++ b/source/layouts/layout_en.erb
@@ -30,36 +30,30 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
-          <%= link_to "Kassiopé", "fr-index.html", class: "navbar-brand" %>
-          <a href="fr-index.html">
+          <%= link_to "Kassiopé", "index.html", class: "navbar-brand" %>
+          <a href="../fr-index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
           <a href="en/en-index.html">
             <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
           </a>
-          <a target="_blank" href="https://www.facebook.com/kassiopeproject/">
-            <%= image_tag "facebook-logo.png", class: "facebook-logo img-circle" %> 
-          </a> 
-          <a target="_blank" href="https://www.instagram.com/kassiope/">
-            <%= image_tag "instagram-logo.png", class: "instagram-logo img-circle" %> 
-          </a> 
-          
 
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Notre action", "fr-action.html" %></li>
-            <li><%= link_to "Notre aventure", "fr-adventure.html" %></li>
-            <li><%= link_to "A propos de nous", "fr-about_us.html" %></li>
-            <li><%= link_to "Nos partenaires", "fr-partners.html" %></li>
+            <li><%= link_to "Our action", "en-action.html" %></li>
+            <li><%= link_to "Our adventure", "en-adventure.html" %></li>
+            <li><%= link_to "About us", "en-about_us.html" %></li>
+            <li><%= link_to "Our partners", "en-partners.html" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+
+
 
     <%= yield %>
   </body>
