--- a/source/stylesheets/pages/_about_us.css.scss
+++ b/source/stylesheets/pages/_about_us.css.scss
@@ -25,8 +25,37 @@
 }
 
 .about-us-text {
-  margin: 20px auto 0px auto;
+  margin: 10px auto 20px auto;
   padding-left: 40px;
   padding-right: 40px;
   max-width: 1200px;
 }
+
+.facebook-logo-about-us {
+  position: absolute;
+  margin-top: 4px;
+  margin-left: 20px;
+  width: 30px;
+  height: 30px;
+  -webkit-transition: 0.1s linear;
+  transition: 0.1s linear;
+  &:hover {
+    width: 34px;
+    height: 34px;
+  }
+}
+
+.instagram-logo-about-us {
+  position: absolute;
+  margin-top: 4px;
+  margin-left: 20px;
+  width: 30px;
+  height: 30px;
+  -webkit-transition: 0.1s linear;
+  transition: 0.1s linear;
+  &:hover {
+    width: 34px;
+    height: 34px;
+  }
+}
+
