--- a/source/stylesheets/pages/_action.css.scss
+++ b/source/stylesheets/pages/_action.css.scss
@@ -16,11 +16,101 @@
       margin-top: 30px;
     }
   }
-
 }
 
+/*
 .issue-text {
   margin: -40px auto -45px auto;
   max-width: 1200px;
   padding: 0px 40px 0px 40px;
 }
+*/
+
+
+.text {
+    margin: 30px 30px;
+    font-family: $text-font;
+    font-size: 20px;
+    line-height: 1.5em;
+    text-align: center;
+
+}
+
+
+
+
+
+
+
+
+/*----- Tabs -----*/
+.nav-tabs {
+    width:100%;
+    overflow:hidden;
+    text-align: center;
+}
+
+    /*----- Tab Links -----*/
+    /* Clearfix */
+    .tab-links:after {
+        display:inline-block;
+        clear:both;
+        content:'';
+        list-style:none;
+
+    }
+
+    .tab-links li {
+        margin:0px 0px;
+        text-align: center;
+        display:inline-block;
+        list-style:none;
+        position:relative;
+        float:none;
+        margin-left: 250px;
+        
+    }
+
+        .tab-links a {
+            padding:30px 60px;
+            display:inline-block;
+            border-radius:0px 0px 0px 0px;
+            background: #34496F;
+            opacity: 0.8;
+            font-family: $title-font;
+            font-size:48px;
+            font-weight:500;
+            color: white;
+            transition:all linear 0.15s;
+        }
+
+        .tab-links a:hover {
+            background:#8499BF;
+            opacity: 0.8;
+            text-decoration:none;
+        }
+
+    li.active a, li.active a:hover {
+        background: white;
+        opacity:1;
+        color: black;
+    }
+
+    /*----- Content of Tabs -----*/
+    .tab-content {
+        margin: -10px auto -25px auto;
+        max-width: 1200px;
+        padding: 10px 40px 20px 40px;
+        background: white;
+        opacity:1;
+    }
+
+        .tab {
+            display:none;
+        }
+
+        .tab.active {
+            display:block;
+        }
+
+
