--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -150,6 +150,7 @@ h4 {
     padding-bottom: 1em;
   }
   img {
+    margin-top: 50px;
     margin-bottom: 40px;
     text-align: center;
     max-width: 95%;
@@ -160,6 +161,8 @@ h4 {
 #us {
   img {
     height: 300px;
+    margin-top: 35px;
+    text-align: center;
   }
 }
 
