--- a/source/en/en-about_us.html.erb
+++ b/source/en/en-about_us.html.erb
@@ -30,15 +30,26 @@ title: Kassiopé Project
   </div>
 
   <div class="about-us-text primary-text">
-
-    <h2>Contact Us </h2>
-    <p>
-    If you have any question, please send us a mail at :  <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
-    </p>
-    <h2>Short presentation</h2>
-    <p> <%= t(:presentation) %> </p>
-    <h2>Our target</h2>
-    <p> <%= t(:target) %> </p>
+      <h2>Who we are</h2>
+      <p>
+        Kassiopé is a non profit organization who’s objective it is to offer health care to marginalized people. This organization was create in 2015 and was lead by four french high school students from Saint Germain en Laye. Today Kassiopé is first and foremost a group of friends around the world taking initiatives and trying to make the world a better place through small steps.
+      </p>
+      <h2>Our Goal</h2>
+      <p>
+        The primary goal of our project is to improve the lives of  marginalized people. However, we have decided to export our project outside of France to an organization that has won our affection. Two of us, having already been to India, imagined our project at Manav Sadhna, a community center in  Ahmedabad where we would offer free eye tests and glasses to the people of the slums. Two of us had already taught in one of the schools near the Gandhi Ashram and wished for our first eye tests to be in these types of communities, always st!cking to the same goals of fighting illiteracy and all forms of marginalisation associated to health issues.
+        We probably won’t change the world, but trying is a beautiful project worth living.
+      </p>
+      <h2>Contact Us</h2>
+      <p>Follow our adventure:</p>
+      <p>- on facebook:<a target="_blank" href="https://www.facebook.com/kassiopeproject/">
+            <%= image_tag "facebook-logo.png", class: "facebook-logo-about-us img-circle" %> </a> 
+      </p>
+      <p>- on instagram: <a target="_blank" href="https://www.instagram.com/kassiope/">
+            <%= image_tag "instagram-logo.png", class: "instagram-logo-about-us img-circle" %> </a> 
+      </p>
+      <p>
+        If you have any question or would desire additional informations, please send an email to : <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
+      </p>
   </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
