--- a/source/en/en-action.html.erb
+++ b/source/en/en-action.html.erb
@@ -19,6 +19,68 @@ title: Kassiopé Project
 
   </div>
 
+
+
+
+  <div class= "text">
+  <p>Our project this year will be divided in two diifferent actions: one on cataract and the other on refraction</p>
+</div>
+
+
+<!-- Onglets-->
+  <div class="tabs">
+    <ul class="tab-links">
+        <li class="active"><a href="#tab1">Cataract</a></li>
+        <li><a href="#tab2">Refraction</a></li>
+    </ul>
+
+    <div class="tab-content primary-text">
+        <div id="tab1" class="tab active">
+    
+            <h2>The Issue</h2>
+            <p>
+              Cataract is the first cause of blindness in the world. This pathology caracterized by a clouding of the lens of the eye, impedes the passage of light. Cataracts make every daily task burdensome until blindness. Although cataracts are a curable disease through surgery, access to proper treatment is often very limited and unaffordable. It is an extremely debilitating pathology since it prevents work and immobilizes little by little the life of the affected individual.
+            </p>
+
+            <h2>What our project offers</h2>
+            <p>
+              The Kassiopé project aims at creating proper infrastructure for cataract surgery, giving people subject to this disease the possibility to elevate themselves professionaly and socially. 
+            </p>
+
+            <h2>The Project</h2>
+            <p>
+              We plan on taking two optometrists to Ahmedabad in India, in order to organize screenings for cataracts in communities associated with Manav Sadhna (a local organization). Following these screenings, two ophtalmologists will come and refine their skills in performing cataract surgeries under the Lotus Eye Clinic’s tutelage. We project to carry out between 50 to 100 cataract surgeries. The price the ophtalmologists will pay for their training will help support our project financially in order to create the most sustainable project we possibly can.
+            </p>
+          
+        </div>
+
+        <div id="tab2" class="tab">
+
+              <h2>The Issue</h2>
+              <p>
+                Obtaining glasses is a distant dream for billions of people. Access to proper glasses and especially eye care is highly restricted in most urbanizing countries, in fact according to the World Health Organization, well over a billion people suffer from refractive error making it the number one cause for low vision in our world. Lack of proper eyesight engenders terrible consequences to those affected by it. Opportunities diminish as one’s capacities decreases; low eyesight impedes on literacy making better job offers and social emancipation impossible for a large percentage of the population; quality of life recedes as everyday tasks become a challenge; general health can also be greatly deteriorated and in the worst cases may lead to blindness. Unfortunately this issue is set to get worse due to numerous factors composing our constantly growing and developing world. The World Health Organization has even anticipated that refractive error will have risen into the top ten global health issues affecting productivity and opportunities by 2030, passing HIV/AIDS in its global burden.
+
+      			Changes call for innovation and innovation leads to progress. Kassiopé aspires to innovate in a project that will lead to progress in this rising issue. It has decided   to make a first small but progressive step towards change, and wishes for that first step to be made in Ahmedabad, Gujarat.
+              </p>
+
+              <h2>What our project offers</h2>
+              <p>
+                We project to bring correct infrastructure to Ahmedabad (Gujarat) in order to offer a possibility for students to elevate themselves socioeconomically. 
+              </p>
+
+              <h2>The Project</h2>
+              <p>
+                Subsequent to an internship in an ophtalmological clinic which will take place in Caen, France, we will go to Ahmedabad in August in order to carry out our first eye tests. We project to carry out these eye tests in 3 to 4 schools situated in Ahmedabad’s slum areas. Then we will drive students to the Lotus Eye Clinic in order to get medical prescriptions from professionals as well as proper glasses.
+              </p>
+          
+        </div>
+
+      </div>
+    </div>
+</div>
+
+
+<!--
   <div class="issue-text primary-text">
     <h2>The issue</h2>
     <p>
@@ -28,6 +90,7 @@ title: Kassiopé Project
 
     </p>
   </div>
+  -->
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
