--- a/source/en/en-index.html.erb
+++ b/source/en/en-index.html.erb
@@ -18,14 +18,16 @@ title: Kassiopé Project
           <div class="row">
             <div class="col-sm-2">
             </div>
+            <!--
             <div class="col-xs-12 col-sm-4">
               <div class="button">
                 <a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg"><%= t(:video) %></a>
               </div>
             </div>
+          -->
             <div class="col-xs-12 col-sm-4">
               <div class="button">
-                <a target="_blank" href="https://www.gofundme.com/27k8efnw" class="btn btn-warning btn-lg"><%= t(:support) %></a>
+                <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg"><%= t(:support) %></a>
               </div>
             </div>
             <div class="col-xs-2">
@@ -45,7 +47,7 @@ title: Kassiopé Project
 
       <div id="issue">
         <div class="container box">
-          <h2>What is the issue?</h2>
+          <h2>What is the issue</h2>
           <h4>1.000.000.000 people suffer from refractive error!</h4>
           <div class="container-fluid">
             <div class="row">
@@ -56,7 +58,7 @@ title: Kassiopé Project
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
                 <%= image_tag "read-book-logo.svg", class: "logo-homepage", alt: "Books"%>
-                <p>Studying results impossible!</p>
+                <p>Cataract is the first cause for blindness in the world!</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
@@ -72,22 +74,22 @@ title: Kassiopé Project
       </div>
 
       <div id="action" class="box">
-        <h2>Our action at Ahmedabad in India</h2>
+        <h2>Our project this year in Ahmedabad India</h2>
         <div class="container-fluid">
           <div class="row">
             <div class="next-to-photo-text col-md-7 col-sm-8 col-xs-12">
               <ul>
-                <li>Our project will take place during the summer break of 2016</li>
-                <li>Provide the students of the center with free eye tests</li>
-                <li>Order glasses from local opticians for the students in need of eye corrections</li>
-                <li>Teaching members of Manav Sadhna how to perform an eye test</li>
-                <li>Elaborate a collaboration between Manav Sadhna and donors for a monthly supply of glasses to the community</li>
-                <li>In that way : Consolidate our project on the long run</li>
+                <li>Our project will take place between January and March 2018</li>
+                <li>Continue to carry out its eye tests and distribute glasses</li>
+                <li>Offer cataract surgery to the communities associated with Manav Sadhna</li>
+                <li>Deepen local doctors’ knowledge about pathologies associated to eyes</li>
+                <li>Help create a center in order to teach doctors how to perform cataract surgeries through the Lotus Eye Clinic’s ophtalmologists</li>
+                <li>Initiate a project that is both socially and economically sustainable</li>
               </ul>
             </div>
 
             <div class="action-img text-center col-md-5 col-sm-4">
-              <%= image_tag "fille.png", class: "hidden-xs", alt: "Indian girl"%>
+              <%= image_tag "groupe-enfants.jpg", class: "hidden-xs", alt: "Indian girl"%>
             </div>
 
           </div>
